--- a/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.css
+++ b/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.css
@@ -4,7 +4,8 @@
 }
 
 .code{
-  max-width: content-box;
+  /*max-width: content-box;*/
+  max-width: available;
   /*max-width: 500px;*/
   max-height: 600px;
 
