--- a/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.html
+++ b/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.html
@@ -25,11 +25,11 @@
             *matCellDef="let element"> {{"Start: " + element.referenceLocation[0] + ", End: " + element.referenceLocation[1]}} </td>
       </ng-container>
 
-<!--      &lt;!&ndash; methodName Column &ndash;&gt;-->
-<!--      <ng-container matColumnDef="methodName">-->
-<!--        <th mat-header-cell *matHeaderCellDef> Method Name</th>-->
-<!--        <td mat-cell *matCellDef="let element"> {{element.methodName}} </td>-->
-<!--      </ng-container>-->
+      <!--      &lt;!&ndash; methodName Column &ndash;&gt;-->
+      <!--      <ng-container matColumnDef="methodName">-->
+      <!--        <th mat-header-cell *matHeaderCellDef> Method Name</th>-->
+      <!--        <td mat-cell *matCellDef="let element"> {{element.methodName}} </td>-->
+      <!--      </ng-container>-->
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
       <tr mat-row
@@ -57,7 +57,9 @@
       <!-- referenceFileName Column -->
       <ng-container matColumnDef="referenceFileName">
         <th mat-header-cell *matHeaderCellDef> Reference Code File Name</th>
-        <td mat-cell *matCellDef="let element"> <a class="btn btn-light btn-sm" (click)="goToFile(element.referenceFileName)">{{element.referenceFileName}}</a> </td>
+        <td mat-cell *matCellDef="let element"><a class="btn btn-light btn-sm"
+                                                  (click)="goToFile(element.referenceFileName)">{{element.referenceFileName}}</a>
+        </td>
       </ng-container>
 
 
@@ -68,11 +70,11 @@
             *matCellDef="let element"> {{"Start: " + element.referenceLocation[0] + ", End: " + element.referenceLocation[1]}} </td>
       </ng-container>
 
-<!--      &lt;!&ndash; methodName Column &ndash;&gt;-->
-<!--      <ng-container matColumnDef="methodName">-->
-<!--        <th mat-header-cell *matHeaderCellDef> method Name</th>-->
-<!--        <td mat-cell *matCellDef="let element"> {{element.methodName}} </td>-->
-<!--      </ng-container>-->
+      <!--      &lt;!&ndash; methodName Column &ndash;&gt;-->
+      <!--      <ng-container matColumnDef="methodName">-->
+      <!--        <th mat-header-cell *matHeaderCellDef> method Name</th>-->
+      <!--        <td mat-cell *matCellDef="let element"> {{element.methodName}} </td>-->
+      <!--      </ng-container>-->
 
       <tr mat-header-row *matHeaderRowDef="projectDisplayedColumns; sticky:true"></tr>
       <tr mat-row
@@ -98,8 +100,8 @@
           <div style='min-height:500px'>
             <mat-tab-group [selectedIndex]="selected.value"
                            (selectedIndexChange)="selected.setValue($event)">
-<!--              <mat-tab *ngFor="let snippet of cloneResults.referenceCode.contents" label="{{snippet.fileName}}">-->
-                <mat-tab *ngFor="let snippet of resultsFiles" label="{{snippet.fileName}}">
+              <!--              <mat-tab *ngFor="let snippet of cloneResults.referenceCode.contents" label="{{snippet.fileName}}">-->
+              <mat-tab *ngFor="let snippet of resultsFiles" label="{{snippet.fileName}}">
                 <div class="divider"></div>
                 <pre><code class="code" [highlight]="snippet.contents" [lineNumbers]="true"></code></pre>
               </mat-tab>
@@ -113,15 +115,17 @@
   </div>
 
   <div class="divider"></div>
-  <button class="btn btn-dark"
-          matTooltip="OPTIONAL: Click to submit feedback on the accuracy of the clones detected"
-          [matTooltipPosition]="position"
-          (click)="goToFeedback()"
-          aria-label="Button that displays a tooltip">
-    Give Feedback
-  </button>
-</div>
+  <div style="text-align: center">
+    <button class="btn btn-dark"
+            matTooltip="OPTIONAL: Click to submit feedback on the accuracy of the clones detected"
+            [matTooltipPosition]="position"
+            (click)="goToFeedback()"
+            aria-label="Button that displays a tooltip">
+      Give Feedback
+    </button>
+  </div>
 
+</div>
 
 
 <div *ngIf="cloneResults.results.length==0">
