--- a/code-clone/src/app/components/code-analysis/input-feedback-data/input-feedback-data.component.css
+++ b/code-clone/src/app/components/code-analysis/input-feedback-data/input-feedback-data.component.css
@@ -33,8 +33,8 @@
 }
 
 .code{
-  max-width: 400px;
+  max-width: available;
   /*max-width: 500px;*/
-  max-height: 150px;
+  max-height: 200px;
 
 }
