--- a/code-clone/src/app/components/view-feedback-data/view-feedback-data.component.html
+++ b/code-clone/src/app/components/view-feedback-data/view-feedback-data.component.html
@@ -57,7 +57,7 @@
     <tr mat-row *matRowDef="let row; columns: getDisplayedColumns();"></tr>
   </table>
 
-  <mat-paginator class="mat-paginator-sticky" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator class="mat-paginator-sticky" [pageSizeOptions]="[5, 10]" showFirstLastButtons></mat-paginator>
 </div>
 
 
